# pyfldextr

./: README.md  pyproject.toml
pyfldextr/: __main__.py  fafile_to_netcdf.py
