
[project]
name = "pyfldextr"
version = "0.1.0"
description = "Extract netCDF VFLD from FA-files"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "loguru>=0.7.0",
    "pyvfld @ git+https://github.com/leifdenby/pyvfld",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
